Add hw01 and pr02

--- a/23f_math/index.htm
+++ b/23f_math/index.htm
@@ -73,17 +73,18 @@
 	<tr>
 		<td class="tdLeft">W02: 09/20</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">條件判斷；數學函式庫；自訂函式；模組</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">條件判斷；數學函式庫；自訂函式</a><br>
 		</td>
 		<td class="tdRight">
-			隨堂練習 02<br>
-			作業公布：HW01
+			作業公布：<a href="hw01.htm">HW01</a><br>
+			<a href="pr02.htm">隨堂練習 02</a>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W03: 09/27</td>
 		<td class="tdMid">
+			翻轉教學：<a href="https://geniusturtle6174.github.io/tutor_python">模組</a><br>
 			<a href="https://geniusturtle6174.github.io/tutor_python">串列</a><br>
 		</td>
 		<td class="tdRight">
