--- a/23f_math/index.htm
+++ b/23f_math/index.htm
@@ -85,10 +85,11 @@
 		<td class="tdLeft">W03: 09/27</td>
 		<td class="tdMid">
 			翻轉教學：<a href="https://geniusturtle6174.github.io/tutor_python">模組</a><br>
-			<a href="https://geniusturtle6174.github.io/tutor_python">串列</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">串列（基本介紹與排序）</a><br>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">串列（容易出問題的寫法）</a>
 		</td>
 		<td class="tdRight">
-			隨堂練習 03<br>
+			<a href="pr03.htm">隨堂練習 03</a><br>
 			作業截止：HW01
 		</td>
 	</tr>
