--- a/23f_math/pr03.htm
+++ b/23f_math/pr03.htm
@@ -21,7 +21,7 @@
 	<li>某商店曾經舉辦過一個活動，內容是多位同行者兩兩一組，每組的兩人身高差多少，就可以獲贈多少隻蝦子。當然不同的分組方式，總共可以拿到的蝦子數就不同。請你撰寫一個 function，計算當六人同行時，他們最多總共可以拿到多少隻蝦（25%）。相關細節說明如下：
 		<ul>
 			<li>輸入是一個 list，長度為 6，每個元素都是正整數，代表 6 個人的身高</li>
-			<li>輸出是一個整數，代表這 6 人總共可以拿到多少隻蝦</li>
+			<li>輸出是一個整數，代表這 6 人最多總共可以拿到多少隻蝦</li>
 			<li>你的 function 的實作，不能因為輸入身高的順序改變而改變</li>
 		</ul>
 	</li>
