--- a/23f_math/pr03.htm
+++ b/23f_math/pr03.htm
@@ -15,7 +15,7 @@
 		<ul>
 			<li>計算平均（25%）</li>
 			<li>排序：奇數排前面，偶數排後面，奇偶相同時大的排前面，小的排後面（25%）</li>
-			<li>排序：先比後兩位大小，再比後三位大小，再比後四位大小（25%）</li>
+			<li>排序：先比後兩位大小（小的排前面，下同），再比後三位大小，再比後四位大小（25%）</li>
 		</ul>
 	</li>
 	<li>某商店曾經舉辦過一個活動，內容是多位同行者兩兩一組，每組的兩人身高差多少，就可以獲贈多少隻蝦子。當然不同的分組方式，總共可以拿到的蝦子數就不同。請你撰寫一個 function，計算當六人同行時，他們最多總共可以拿到多少隻蝦（25%）。相關細節說明如下：
