--- a/23f_math/index.htm
+++ b/23f_math/index.htm
@@ -97,32 +97,34 @@
 	<tr>
 		<td class="tdLeft">W04: 10/04</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">字典；重複執行</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">字典（基本介紹）；迴圈（基本介紹）</a><br>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">字典（容易出問題的寫法）；集合</a>
 		</td>
 		<td class="tdRight">
-			隨堂練習 04<br>
-			作業公布：HW02
+			<a href="pr04.htm">隨堂練習 04</a><br>
+			作業公布：<a href="hw02.htm">HW02</a>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W05: 10/11</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">遞迴</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">Zip、map，與 filter；迴圈（
+簡單應用範例）；Comprehension</a><br>
 		</td>
 		<td class="tdRight">
 			隨堂練習 05<br>
+			作業公布：HW03
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W06: 10/18</td>
 		<td class="tdMid">
-			翻轉教學：<a href="https://geniusturtle6174.github.io/tutor_python">List comprehension</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">遞迴</a><br>
 		</td>
 		<td class="tdRight">
 			隨堂練習 06<br>
-			作業公布：HW03<br>
 			作業截止：HW02
 		</td>
 	</tr>
