--- a/23f_math/index.htm
+++ b/23f_math/index.htm
@@ -109,11 +109,11 @@
 	<tr>
 		<td class="tdLeft">W05: 10/11</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">Zip、map，與 filter；迴圈（
-簡單應用範例）；Comprehension</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">迴圈（簡單應用範例）；Comprehension；Zip、map，與 filter</a><br>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">迴圈（簡單應用範例）</a>
 		</td>
 		<td class="tdRight">
-			隨堂練習 05<br>
+			<a href="pr05.htm">隨堂練習 05</a><br>
 			作業公布：HW03
 		</td>
 	</tr>
