--- a/23f_math/hw02.htm
+++ b/23f_math/hw02.htm
@@ -56,7 +56,7 @@ class Solution:
 	<li>你可以先取得 LeetCode 的 AC，再來修改程式以符合本題目之要求。</li>
 	<li>測資分組方式，另行於 eeclass 討論區宣布。</li>
 	<li>用於 speed bonus 的測資將保證有解，但長度可能會超過原版題目限制。</li>
-	<li>請遵守檔名及之要求，且繳交之程式碼中，除了以下範例中 twoSum 函式的內容，以及「if __name__ == '__main__':」區塊當中的內容之外，不得做任何修改，否則會視情況予以折扣。
+	<li>請遵守檔名等相關要求，且繳交之程式碼中，除了以下範例中 twoSum 函式的內容，以及「if __name__ == '__main__':」區塊當中的內容之外，不得做任何修改，否則會視情況予以折扣。
 <pre class="brush: py">
 class Solution:
 	def twoSum(self, nums, target):
