--- a/23f_math/index.htm
+++ b/23f_math/index.htm
@@ -114,7 +114,7 @@
 		</td>
 		<td class="tdRight">
 			<a href="pr05.htm">隨堂練習 05</a><br>
-			作業公布：HW03
+			作業公布：<a href="hw03.htm">HW03</a>
 		</td>
 	</tr>
 
