--- a/23f_math/pr05.htm
+++ b/23f_math/pr05.htm
@@ -18,7 +18,7 @@
 
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 <ul>
-	<li>請解答此 LeetCode 問題（30%）：<a href="https://leetcode.com/problems/find-the-pivot-integer/">2485. Find the Pivot Integer</a></li>
+	<li>請解答此 LeetCode 問題（30%）：<a href="https://leetcode.com/problems/find-the-pivot-integer/">2485. Find the Pivot Integer</a>。本題允許 import math。</li>
 	<li>請解答此 LeetCode 問題（35%）：<a href="https://leetcode.com/problems/height-checker/">1051. Height Checker</a></li>
 	<li>請解答此 LeetCode 問題（35%）：<a href="https://leetcode.com/problems/sort-the-people/">2418. Sort the People</a></li>
 	<li>加分題：請只使用一行程式，解答 Height Checker 或 Sort the People 兩者的任一題（10%）</li>
