--- a/23f_math/hw03.htm
+++ b/23f_math/hw03.htm
@@ -43,6 +43,7 @@
 <p style="background-color:#f99;font-size:17pt">提示與注意事項</p>
 <ul>
 	<li>除了 6174 或 10 的整數次方的數字以外，你的程式碼中不能出現任何數字（測試函式時除外）。自我挑戰：試著連 6174 也不能使用。</li>
+	<li>輸入小於 1000 時，請當作有前導零來處理，例如 123 應視為 0123，45 應視為 0045，6 應視為 0006。</li>
 	<li>測資只有一組，會把所有合法數字都試過，全對才能得分。</li>
 	<li>請遵守檔名等相關要求，且繳交之程式碼中，除了以下範例中函式的內容，以及「if __name__ == '__main__':」區塊當中的內容之外，不得做任何修改，否則會視情況予以折扣。惟若有需要，可以撰寫新的函式。
 <pre class="brush: py">
