--- a/23f_math/index.htm
+++ b/23f_math/index.htm
@@ -122,9 +122,12 @@
 		<td class="tdLeft">W06: 10/18</td>
 		<td class="tdMid">
 			<a href="https://geniusturtle6174.github.io/tutor_python">遞迴</a><br>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">LeetCode 注意事項整理</a><br>
+			建議預習：<a href="https://geniusturtle6174.github.io/tutor_python">字串</a><br>
 		</td>
 		<td class="tdRight">
-			隨堂練習 06<br>
+			<a href="pr06.htm">隨堂練習 06</a><br>
+			作業公布：<a href="hw04.htm">HW04</a><br>
 			作業截止：HW02
 		</td>
 	</tr>
@@ -132,11 +135,11 @@
 	<tr>
 		<td class="tdLeft">W07: 10/25</td>
 		<td class="tdMid">
-			翻轉教學：<a href="https://geniusturtle6174.github.io/tutor_python">字串</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">字串；Numpy</a><br>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">檔案</a>
 		</td>
 		<td class="tdRight">
 			隨堂練習 07<br>
-			作業公布：HW04<br>
 			作業截止：HW03
 		</td>
 	</tr>
@@ -144,7 +147,7 @@
 	<tr>
 		<td class="tdLeft">W08: 11/01</td>
 		<td class="tdMid">
-			翻轉教學：<a href="https://geniusturtle6174.github.io/tutor_python">檔案</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">Numpy；動態規劃</a><br>
 		</td>
 		<td class="tdRight">
 			隨堂練習 08<br>
@@ -155,8 +158,7 @@
 	<tr>
 		<td class="tdLeft">W09: 11/08</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">Numpy</a><br>
-			翻轉教學：<a href="https://geniusturtle6174.github.io/tutor_python">動態規劃</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">動態規劃</a><br>
 		</td>
 		<td class="tdRight">
 			隨堂練習 09<br>
