--- a/23f_math/index.htm
+++ b/23f_math/index.htm
@@ -139,7 +139,7 @@
 			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_python">檔案</a>
 		</td>
 		<td class="tdRight">
-			隨堂練習 07<br>
+			<a href="pr07.htm">隨堂練習 07</a><br>
 			作業截止：HW03
 		</td>
 	</tr>
@@ -150,7 +150,7 @@
 			<a href="https://geniusturtle6174.github.io/tutor_python">Numpy；動態規劃</a><br>
 		</td>
 		<td class="tdRight">
-			隨堂練習 08<br>
+			<a href="pr08.htm">隨堂練習 08</a><br>
 			作業截止：HW04
 		</td>
 	</tr>
