--- a/23f_math/index.htm
+++ b/23f_math/index.htm
@@ -147,7 +147,7 @@
 	<tr>
 		<td class="tdLeft">W08: 11/01</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">Numpy；動態規劃</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">Numpy</a><br>
 		</td>
 		<td class="tdRight">
 			<a href="pr08.htm">隨堂練習 08</a><br>
@@ -162,7 +162,7 @@
 		</td>
 		<td class="tdRight">
 			隨堂練習 09<br>
-			作業公布：期中作業
+			作業公布：<a href="hwmt.htm">期中作業</a>
 		</td>
 	</tr>
 
