--- a/23f_math/pr08.htm
+++ b/23f_math/pr08.htm
@@ -33,7 +33,7 @@
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
 
 <ul>
-	<li>無</li>
+	<li>本題允許 import numpy。</li>
 </ul>
 
 </body></html>
