--- a/23f_math/hwmt02.htm
+++ b/23f_math/hwmt02.htm
@@ -28,6 +28,11 @@
 
 <p style="background-color:#9f9;text-align:center;font-size:17pt">HWMT02 - Never Gonna Give up (Ver. spell-out)</p>
 
+<p style="background-color:#f99;font-size:17pt">作業資訊</p>
+<ul>
+	<li>檔名必須為「hwmt_q2_你的學號.py」，例如 hwmt_q2_9962816.py</li>
+</ul>
+
 <p style="background-color:#f99;font-size:17pt">題目敘述</p>
 
 <script>
@@ -69,6 +74,16 @@ function goNext(diff){
 <p style="background-color:#f99;font-size:17pt">提示與注意事項</p>
 <ul>
 	<li>測資分組方式與 HW04 相同。</li>
+	<li>程式架構範例如下：
+<pre class="brush: py">
+def spell_word_by_ptable(in_str, p_table):
+	pass
+
+
+if __name__ == '__main__':
+	pass
+</pre>
+	</li>
 </ul>
 
 </body></html>
