--- a/23f_math/hwmt03.htm
+++ b/23f_math/hwmt03.htm
@@ -20,6 +20,11 @@
 
 <p style="background-color:#9f9;text-align:center;font-size:17pt">HWMT03 - Black Hole Number (6 digits)</p>
 
+<p style="background-color:#f99;font-size:17pt">作業資訊</p>
+<ul>
+	<li>檔名必須為「hwmt_q3_你的學號.py」，例如 hwmt_q3_9962816.py</li>
+</ul>
+
 <p style="background-color:#f99;font-size:17pt">題目敘述</p>
 給定一個六個位數不完全相同的六位數，並反覆執行「將位數由大排到小的結果減去由小排到大的結果」（以下簡稱為「演算」），則最後一定會來到 631764，或者 549945，或者一個七個數字的循環 420876 → 851742 → 750843 → 840852 → 860832 → 862632 → 642654 → 420876。請撰寫一個函式，名為 black_hole_number，來計算此問題。
 
@@ -40,6 +45,16 @@
 	<li>測資只有一組。</li>
 	<li>輸入小於 10000 時，請當作有前導零來處理，例如 123 應視為 000123，45 應視為 000045，6 應視為 000006。</li>
 	<li>你的程式中，除了黑洞數本身以外，不應有把答案寫死，或任何教師認定為等效或具相近效果之行為。</li>
+	<li>程式架構範例如下：
+<pre class="brush: py">
+def black_hole_number(num):
+	pass
+
+
+if __name__ == '__main__':
+	pass
+</pre>
+	</li>
 </ul>
 
 </body></html>
