--- a/23f_math/hwmt01.htm
+++ b/23f_math/hwmt01.htm
@@ -20,8 +20,13 @@
 
 <p style="background-color:#9f9;text-align:center;font-size:17pt">HWMT01 - Get Shimps by Differents of Heights</p>
 
+<p style="background-color:#f99;font-size:17pt">作業資訊</p>
+<ul>
+	<li>檔名必須為「hwmt_q1_你的學號.py」，例如 hwmt_q1_9962816.py</li>
+</ul>
+
 <p style="background-color:#f99;font-size:17pt">題目敘述</p>
-某商店曾經舉辦過一個活動，內容是多位同行者兩兩一組，每組的兩人身高差多少，就可以獲贈多少隻蝦子。當然不同的分組方式，總共可以拿到的蝦子數就不同。請你撰寫一個函式 get_shimp_num，計算當數人同行時，他們最多總共可以拿到多少隻蝦。
+某商店曾經舉辦過一個活動，內容是多位同行者兩兩一組，每組的兩人身高差多少，就可以獲贈多少隻蝦子。當然不同的分組方式，總共可以拿到的蝦子數就不同。請你撰寫一個函式 get_shimp_num，根據所有來客的身高，計算他們最多總共可以拿到多少隻蝦。
 
 <p style="background-color:#f99;font-size:17pt">輸入說明</p>
 一個不為空的 list，每個元素都是正整數，代表這些人的身高
@@ -38,6 +43,16 @@
 <p style="background-color:#f99;font-size:17pt">提示與注意事項</p>
 <ul>
 	<li>測資有兩組，其中一組的串列長度為偶數。</li>
+	<li>程式架構範例如下：
+<pre class="brush: py">
+def get_shimp_num(heights):
+	pass
+
+
+if __name__ == '__main__':
+	pass
+</pre>
+	</li>
 </ul>
 
 </body></html>
