--- a/23f_math/hwmt02.htm
+++ b/23f_math/hwmt02.htm
@@ -9,10 +9,10 @@
 	<link href="shCore.css" rel="stylesheet" type="text/css" />
 	<link href="shThemeDefault.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript">
-		input = prompt('Enter passwrd:')
-		if(input!='3135134126'){
-			document.removeChild(document.documentElement);
-		}
+		// input = prompt('Enter passwrd:')
+		// if(input!='3135134126'){
+		// 	document.removeChild(document.documentElement);
+		// }
 		SyntaxHighlighter.all();
 	</script>
 	<style>
