Fix spelling error

--- a/23f_math/hwmt.htm
+++ b/23f_math/hwmt.htm
@@ -39,7 +39,7 @@
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 
 <ul>
-	<li><a href="hwmt01.htm">Q1: Get Shimps by Differents of Heights</a> (50 points)。</li>
+	<li><a href="hwmt01.htm">Q1: Get Shrimps by Differents of Heights</a> (50 points)。</li>
 	<li><a href="hwmt02.htm">Q2: Never Gonna Give up (Ver. spell-out)</a> (100 points)。</li>
 	<li><a href="hwmt03.htm">Q3: Black Hole Number (6 digits)</a> (100 points)。</li>
 	<li>Q4: 請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/greatest-common-divisor-of-strings/">1071. Greatest Common Divisor of Strings</a> (100 points)。
