Update pylint bonus rule

--- a/23f_math/hwmt.htm
+++ b/23f_math/hwmt.htm
@@ -62,7 +62,7 @@
 		<ul>
 			<li>每題評分指令皆為「pylint --disable=C0103,C0301,C0111,R0201,R1705,C1801,R0903 your_file.py」。評分結果以教師安裝的版本(2.2.2)為準。</li>
 			<li>每題給分方式為 max(pylint-score, 0) * 0.4，取各題之最小值為整體分數。</li>
-			<li>遲交者不給分。</li>
+			<li>遲交者不給分，若有試圖關閉或避開評分指令未列出的扣分項目等行為時，亦不給分。</li>
 		</ul>
 	</li>
 </ul>
