--- a/23f_math/hwmt03.htm
+++ b/23f_math/hwmt03.htm
@@ -32,7 +32,7 @@
 一個小於 1000000，且六個位數不完全相同的正整數
 
 <p style="background-color:#f99;font-size:17pt">輸出說明</p>
-回傳一個串列，內容都是整數，代表到掉入黑洞為止的過程。此串列的第一個數必須是輸入給函式的數字，且串列的最後一個數字經過演算後，會跟已在串列中的某個數字相等。
+回傳一個串列，內容都是整數，代表到掉入黑洞為止的過程。此串列當中的每個數字最多只能出現一次，且第一個數字必須是輸入給函式的數字，以及串列的最後一個數字經過演算後，會跟已在串列中的某個數字相等。
 
 <p style="background-color:#f99;font-size:17pt">Sample Input</p>
 12345
