--- a/23f_math/hwmt.htm
+++ b/23f_math/hwmt.htm
@@ -41,7 +41,11 @@
 <ul>
 	<li><a href="hwmt01.htm">Q1: Get Shrimps by Differents of Heights</a> (50 points)。</li>
 	<li><a href="hwmt02.htm">Q2: Never Gonna Give up (Ver. spell-out)</a> (100 points)。</li>
-	<li><a href="hwmt03.htm">Q3: Black Hole Number (6 digits)</a> (100 points)。</li>
+	<li><a href="hwmt03.htm">Q3: Black Hole Number (6 digits)</a> (100 points)。
+		<ul>
+			<li>本題期限為 11/21 (二) 23:00</li>
+		</ul>
+	</li>
 	<li>Q4: 請解答此 LeetCode 問題：<a href="https://leetcode.com/problems/greatest-common-divisor-of-strings/">1071. Greatest Common Divisor of Strings</a> (100 points)。
 		<ul>
 			<li>檔名必須為「hwmt_q4_你的學號.py」，例如 hwmt_q4_9962816.py。內容規定請依 LeetCode 說明進行。</li>
@@ -61,8 +65,8 @@
 	<li>Pylint Bonus
 		<ul>
 			<li>每題評分指令皆為「pylint --disable=C0103,C0301,C0111,R0201,R1705,C1801,R0903 your_file.py」。評分結果以教師安裝的版本(2.2.2)為準。</li>
-			<li>每題給分方式為 max(pylint-score, 0) * 0.4，取各題之最小值為整體分數。</li>
-			<li>遲交者不給分，若有試圖關閉或避開評分指令未列出的扣分項目等行為時，亦不給分。</li>
+			<li>每題給分方式為 max(pylint-score, 0)，取各題之中位數 * 0.4 為整體分數。</li>
+			<li>若有試圖關閉，或避開評分指令未列出的扣分項目等行為時，本 bonus 不給分。</li>
 		</ul>
 	</li>
 </ul>
