--- a/23f_math/hwmt.htm
+++ b/23f_math/hwmt.htm
@@ -65,7 +65,7 @@
 	<li>Pylint Bonus
 		<ul>
 			<li>每題評分指令皆為「pylint --disable=C0103,C0301,C0111,R0201,R1705,C1801,R0903 your_file.py」。評分結果以教師安裝的版本(2.2.2)為準。</li>
-			<li>每題給分方式為 max(pylint-score, 0)，取各題之中位數 * 0.4 為整體分數。</li>
+			<li>每題給分方式為 max(pylint-score, 0)，取各題之中位數或平均數之較大者，再乘以 0.4 為整體分數。</li>
 			<li>若有試圖關閉，或避開評分指令未列出的扣分項目等行為時，本 bonus 不給分。</li>
 		</ul>
 	</li>
