--- a/23f_math/index.htm
+++ b/23f_math/index.htm
@@ -189,17 +189,17 @@
 	<tr>
 		<td class="tdLeft">W12: 11/29</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">爬蟲</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">爬蟲、二維繪圖</a><br>
 		</td>
 		<td class="tdRight">
-			隨堂練習 10<br>
+			<a href="pr10.htm">隨堂練習 10</a><br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W13: 12/06</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">機器學習與圖表繪製</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">二維繪圖、機器學習</a><br>
 		</td>
 		<td class="tdRight">
 			隨堂練習 11<br>
@@ -210,7 +210,7 @@
 	<tr>
 		<td class="tdLeft">W14: 12/13</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">機器學習與圖表繪製</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">機器學習</a><br>
 		</td>
 		<td class="tdRight">
 			隨堂練習 12<br>
@@ -220,7 +220,7 @@
 	<tr>
 		<td class="tdLeft">W15: 12/20</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">Flask</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">機器學習、音訊處理</a><br>
 		</td>
 		<td class="tdRight">
 			隨堂練習 13<br>
