--- a/23f_math/index.htm
+++ b/23f_math/index.htm
@@ -199,18 +199,19 @@
 	<tr>
 		<td class="tdLeft">W13: 12/06</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">二維繪圖、機器學習</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">二維繪圖</a><br>
+			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">基本概念、最近鄰居法</a>
 		</td>
 		<td class="tdRight">
-			隨堂練習 11<br>
-			作業公布：期末作業
+			<a href="pr11.htm">隨堂練習 11</a><br>
+			作業公布：<a href="finalProject.htm">期末作業</a>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W14: 12/13</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">機器學習</a><br>
+			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">特徵降維、線性回歸</a><br>
 		</td>
 		<td class="tdRight">
 			隨堂練習 12<br>
@@ -220,7 +221,8 @@
 	<tr>
 		<td class="tdLeft">W15: 12/20</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">機器學習、音訊處理</a><br>
+			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">類神經網路</a><br>
+			音訊處理：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">簡介</a><br>
 		</td>
 		<td class="tdRight">
 			隨堂練習 13<br>
@@ -230,11 +232,10 @@
 	<tr>
 		<td class="tdLeft">W16: 12/27</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">音訊處理</a><br>
+			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">音訊處理</a><br>
 		</td>
 		<td class="tdRight">
 			隨堂練習 14<br>
-			作業截止：期末作業運算結果
 		</td>
 	</tr>
 
@@ -254,7 +255,7 @@
 			期末作業展示週
 		</td>
 		<td class="tdRight">
-			作業截止：期末作業書面報告
+			作業截止：期末作業
 		</td>
 	</tr>
 
