--- a/23f_math/finalProject.htm
+++ b/23f_math/finalProject.htm
@@ -18,7 +18,7 @@
 	<li>Deadline:
 		<ul>
 			<li>預測：01/07 (日) 08:00</li>
-			<li>資料、程式與報告：01/09 (二) 08:00</li>
+			<li>資料、程式與報告（以下簡稱為報告）：01/09 (二) 08:00</li>
 		</ul>
 	</li>
 	<li>繳交方式: eeclass 作業上傳區，預測與報告分別開設繳交區，檔名規定如下
@@ -33,18 +33,22 @@
 
 <p style="background-color:#f99;font-size:17pt">程式撰寫說明</p>
 
-你的程式不能將資料的任何一部分，寫死在程式當中。前述所指的資料，包括但不限於教師提供之資料、同學自行爬取之資料，以及程式運算之結果。另外，請盡可能避免使用具有隨機性質的模型來進行預測。
+你的程式不能將資料的任何一部分，寫死在程式當中。前述所指的資料，包括但不限於教師提供之資料、同學自行爬取之資料，以及程式運算之結果（如方程式係數等）。另外，請盡可能避免使用具有隨機性質的模型來進行預測。
 
 <p style="background-color:#f99;font-size:17pt">報告說明</p>
 
-請於報告中，依序回答下列問題
-<ul>
-	<li>TBD</li>
-</ul>
+請複製以下方框中的問題到報告中，並依序回答。回答內容建議從每題的下一行開始撰寫，若有需要也可以適當的增加空行。
+<pre style="border:1px solid">
+一、是否有抓取其他資料？若有且是用程式抓取，請一併提供程式執行的指令。
+
+二、
+
+三、
+</pre>
 
 <p style="background-color:#f99;font-size:17pt">提示與注意事項</p>
 <ul>
-	<li>預測未繳交者，報告（含程式與資料，下同）予以七折或更低之折扣；報告是否繳交不影響是否及格時，不接受遲交</li>
+	<li>預測未準時繳交者，報告予以七折或更低之折扣；報告是否繳交不影響是否及格時，不接受遲交</li>
 </ul>
 
 </body></html>
