--- a/23f_math/index.htm
+++ b/23f_math/index.htm
@@ -189,7 +189,7 @@
 	<tr>
 		<td class="tdLeft">W12: 11/29</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_python">爬蟲、二維繪圖</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_python">爬蟲；二維繪圖</a><br>
 		</td>
 		<td class="tdRight">
 			<a href="pr10.htm">隨堂練習 10</a><br>
@@ -200,7 +200,7 @@
 		<td class="tdLeft">W13: 12/06</td>
 		<td class="tdMid">
 			<a href="https://geniusturtle6174.github.io/tutor_python">二維繪圖</a><br>
-			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">基本概念、最近鄰居法</a>
+			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">基本概念；最近鄰居法</a>
 		</td>
 		<td class="tdRight">
 			<a href="pr11.htm">隨堂練習 11</a><br>
@@ -211,10 +211,10 @@
 	<tr>
 		<td class="tdLeft">W14: 12/13</td>
 		<td class="tdMid">
-			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">特徵降維、線性回歸</a><br>
+			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">基本概念；最近鄰居法；線性回歸</a><br>
 		</td>
 		<td class="tdRight">
-			隨堂練習 12<br>
+			<a href="pr12.htm">隨堂練習 12</a><br>
 		</td>
 	</tr>
 
