Add pr13 & exam rules

--- a/23f_math/index.htm
+++ b/23f_math/index.htm
@@ -221,11 +221,13 @@
 	<tr>
 		<td class="tdLeft">W15: 12/20</td>
 		<td class="tdMid">
-			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">類神經網路</a><br>
+			機器學習（上週回顧）：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">最近鄰居法；線性回歸</a><br>
+			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">特徵降維；類神經網路</a><br>
 			音訊處理：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">簡介</a><br>
+			<a href="examRules.htm">期末測驗規則</a>
 		</td>
 		<td class="tdRight">
-			隨堂練習 13<br>
+			<a href="pr13.htm">隨堂練習 13</a><br>
 		</td>
 	</tr>
 
