--- a/23f_math/finalProject.htm
+++ b/23f_math/finalProject.htm
@@ -37,18 +37,25 @@
 
 <p style="background-color:#f99;font-size:17pt">報告說明</p>
 
-請複製以下方框中的問題到報告中，並依序回答。回答內容建議從每題的下一行開始撰寫，若有需要也可以適當的增加空行。
+請複製以下方框中的問題到報告中，並依序回答。回答內容建議與該題及下一題之間各空一行，若有需要也可以適當的增加空行。
 <pre style="border:1px solid">
-一、是否有抓取其他資料？若有且是用程式抓取，請一併提供程式執行的指令。
+一、是否有抓取其他資料？若有，抓取範圍為何？
 
-二、
+二、承上，若有且是用程式抓取，請一併提供程式執行的指令。
 
-三、
+三、你是否使用所繳交的全部資料來訓練模型？若否，請說明如何選定範圍。
+
+四、是否有使用課堂範例未介紹之函式庫？若有則請列出。
+
+五、請依執行順序，列出所有程式碼的執行方式（若有抓取資料的爬蟲，也要重新列出）
+
+六、若你的做法有其他上面沒問到的特殊之處，請說明之。
 </pre>
 
 <p style="background-color:#f99;font-size:17pt">提示與注意事項</p>
 <ul>
 	<li>預測未準時繳交者，報告予以七折或更低之折扣；報告是否繳交不影響是否及格時，不接受遲交</li>
+	<li>本專案允許 import 任何 Python 內建或 pip 已提供之函式庫。</li>
 </ul>
 
 </body></html>
