Add pr14, adjust rulse

--- a/23f_math/examRules.htm
+++ b/23f_math/examRules.htm
@@ -17,7 +17,7 @@
 
 	<li>場地與時間</li>
 	<ul>
-		<li>01/03 (二) 15:30~17:00 於綜三 119 進行測驗</li>
+		<li>01/03 (三) 15:30~17:00 於綜三 119 進行測驗</li>
 		<li>教師允許前與 15:50 後不得進場，可提前離場的時間另外宣布</li>
 		<li>可能會視情況提前開始或延後結束</li>
 	</ul>
