--- a/23f_math/finalProject.htm
+++ b/23f_math/finalProject.htm
@@ -18,43 +18,50 @@
 	<li>Deadline:
 		<ul>
 			<li>預測：01/07 (日) 08:00</li>
-			<li>資料、程式與報告（以下簡稱為報告）：01/09 (二) 08:00</li>
+			<li>資料、程式與報告（以下視情況簡稱為報告）：01/09 (二) 08:00</li>
 		</ul>
 	</li>
 	<li>繳交方式: eeclass 作業上傳區，預測與報告分別開設繳交區，檔名規定如下
 		<ul>
 			<li>預測：prediction.txt，內容只有一行，代表你預測的網址，只須包含最後面六碼</li>
-			<li>資料、程式與報告：資料必須全部包含在單一檔案內，檔名為 data.txt；報告請依說明撰寫，檔名為 report.txt；程式檔名及檔案個數不限制</li>
+			<li>資料、程式與報告：
+				<ul>
+					<li>資料必須全部包含在單一檔案內，檔名為 data.txt，格式自訂</li>
+					<li>報告請依下方說明撰寫，檔名為 report.txt</li>
+					<li>程式檔名及檔案個數不限制，但建議避免半形英數以外的字元</li>
+				</ul>
+			</li>
 		</ul>
 	</li>
-	<li>Demo 時間地點: 01/10 原上課時段於原教室。有可能只選 15 至 20 人來口頭回答問題（名單最遲於當場公布，所以每個人還是都要交報告），其餘同學的 demo 分數將依據報告直接給予</li>
-	<li>評分方式: 預測 30 分（依班級整體排名給予），demo 70 分。允許使用程式以外的方式進行預測，但程式參與比率的多寡，會影響 demo 分數。</li>
+	<li>Demo 時間地點: 01/10 原上課時段於原教室。有可能只選 15 至 20 人來口頭回答問題，名單最遲於當場公布</li>
+	<li>評分方式: 預測 30 分（依班級整體排名給予），報告 70 分。允許使用程式以外的方式進行預測，但程式參與比率的多寡，會影響報告分數。</li>
 </ul>
 
 <p style="background-color:#f99;font-size:17pt">程式撰寫說明</p>
 
-你的程式不能將資料的任何一部分，寫死在程式當中。前述所指的資料，包括但不限於教師提供之資料、同學自行爬取之資料，以及程式運算之結果（如方程式係數等）。另外，請盡可能避免使用具有隨機性質的模型來進行預測。
+你的程式不能將資料內容的任何一部分，寫死在程式當中。前述所指的資料，包括但不限於教師提供之資料、同學自行爬取之資料，以及程式運算之結果（如方程式係數等）。另外，請盡可能避免使用具有隨機性質的模型來進行預測。
 
 <p style="background-color:#f99;font-size:17pt">報告說明</p>
 
 請複製以下方框中的問題到報告中，並依序回答。回答內容建議與該題及下一題之間各空一行，若有需要也可以適當的增加空行。
 <pre style="border:1px solid">
-一、是否有抓取其他資料？若有，抓取範圍為何？
+一、除教師在隨堂練習提供的資料以外，是否有抓取其他資料？若有，抓取的時間範圍為何？以及如何選定抓取哪些資料（例如幾月幾日到幾月幾日，每天取最接近幾點的一則偷偷說）？
 
-二、承上，若有且是用程式抓取，請一併提供程式執行的指令。
+二、承上，若有抓取其他資料，且有任何過程使用到程式，請在此題提供程式執行的指令。
 
 三、你是否使用所繳交的全部資料來訓練模型？若否，請說明如何選定範圍。
 
-四、是否有使用課堂範例未介紹之函式庫？若有則請列出。
+四、在整個專案中，是否有使用課堂範例未介紹之函式庫（例如 Selenium）？若有則請列出，並說明其用途。
 
-五、請依執行順序，列出所有程式碼的執行方式（若有抓取資料的爬蟲，也要重新列出）
+五、請依執行順序，列出所有程式碼的執行方式。若有抓取資料的爬蟲，也要在此題重新列出。
 
-六、若你的做法有其他上面沒問到的特殊之處，請說明之。
+六、若你的做法有其他上面沒問到的特殊之處（例如用了課堂介紹以外的模型，或者用了兩個以上的模型），請說明之。
 </pre>
 
 <p style="background-color:#f99;font-size:17pt">提示與注意事項</p>
 <ul>
-	<li>預測未準時繳交者，報告予以七折或更低之折扣；報告是否繳交不影響是否及格時，不接受遲交</li>
+	<li>預測未準時繳交者，本專案只給予報告分數</li>
+	<li>報告是否繳交不影響是否及格時，不接受遲交</li>
 	<li>本專案允許 import 任何 Python 內建或 pip 已提供之函式庫。</li>
 </ul>
 
