--- a/23f_math/index.htm
+++ b/23f_math/index.htm
@@ -223,7 +223,6 @@
 		<td class="tdMid">
 			機器學習（上週回顧）：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">最近鄰居法；線性回歸</a><br>
 			機器學習：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">特徵降維；類神經網路</a><br>
-			音訊處理：<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">簡介</a><br>
 			<a href="examRules.htm">期末測驗規則</a>
 		</td>
 		<td class="tdRight">
@@ -237,7 +236,7 @@
 			<a href="https://geniusturtle6174.github.io/music-info-analysis-tutorial/">音訊處理</a><br>
 		</td>
 		<td class="tdRight">
-			隨堂練習 14<br>
+			<a href="pr14.htm">隨堂練習 14</a><br>
 		</td>
 	</tr>
 
