--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -1,1 +1,247 @@
+<html>
+<head>
+	<title>0322--數位編輯系統</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel=stylesheet type="text/css" href="myCss.css">
+	<base target="_blank">
+	<script type="text/javascript" src="myJs.js"></script>
+</head>
 
+<body bgcolor="#ccccff">
+
+<center>
+
+<span class="myTitle">
+	0322 數位編輯系統<br>
+	週三 2, 3, 4 L-102<br>
+</span>
+<br>
+<table cellspacing="0" border=0>
+	<tr>
+		<td width=98% align=center>
+			<span class="myTitle">教師：<a href="http://geniusturtle6174.github.io">王崇喆</a><br><script>emailDisplay("geniusturtle6174", "gmail", "com");</script></span>
+		</td>
+		<!--td width=49% align=center>
+			<span class="myTitle">助教：無<br><script>emailDisplay("none", "gmail", "com");</script></span>
+		</td-->
+	</tr>
+</table>
+
+<br>
+<hr/>
+
+<table class="otherInfo" cellspacing="0">
+	<tr><th align="left" colspan=2 style="border-bottom-width:2;border-bottom-color:black">課程公布欄</th></tr>
+	<tr><th class="thLeft" align=center>發佈日期</th><th class="thRight" align=center>內容</th></tr>
+	<tr>
+		<td class="tdLeft">02/18</td>
+		<td class="tdRight">
+			<ul>
+				<li>本課程相關連結：
+					<ul>
+						<li>教材頁面: <a href="https://geniusturtle6174.github.io/tutor_web#PHP">https://geniusturtle6174.github.io/tutor_web#PHP</a></li>
+						<li>MS Teams: <a href="https://teams.microsoft.com/l/team/19%3Au5v99MQA67N6nGm6VmQ7IOjfLvWm56cnZtMckXvyWMQ1%40thread.tacv2/conversations?groupId=913b7068-cf86-466c-be00-59fa2ea0649b&tenantId=399232fb-17d1-45ca-bda6-5b540441bd62">112下 - 數位編輯系統 - 教科二P - 0322</a></li>
+					</ul>
+				</li>
+				<li>隨堂練習及作業未於課堂正式宣布前皆為暫定</li>
+			</ul>
+		</td>
+	</tr>
+</table>
+
+<br><br>
+
+<table class="otherInfo" cellspacing="0">
+	<tr><th align="left" colspan=3 style="border-bottom-width:2;border-bottom-color:black">課程進度表</th></tr>
+	<tr>
+		<th class="thLeft" align=center>課程日期</th>
+		<th class="thRight" align=center colspan=2>概要</th>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W01: 02/21</td>
+		<td class="tdMid">
+			<a href="courseIntro.htm">課程簡介</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 開發環境安裝與程式基礎訓練（輸出、變數）</a><br>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 程式基礎訓練（條件判斷）</a><br>
+		</td>
+		<td class="tdRight">
+			<a href="prAndHwRules.htm">平時練習與作業規則</a><br>
+			<a href="pr01.htm">平時練習一</a><br>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W02: 02/28</td>
+		<td class="tdMid">
+			228 停課
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W03: 03/06</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 程式基礎訓練（重複執行）</a><br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W04: 03/13</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 程式基礎訓練（陣列）</a><br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W05: 03/20</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 程式基礎訓練（陣列、其他練習）</a><br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W06: 03/27</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">phpMyAdmin 設定簡介、SQL 語法（SELECT）</a><br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W07: 04/03</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">SQL 語法（SELECT、JOIN）</a><br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W08: 04/10</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">SQL 語法（DELETE、INSERT、UPDATE）</a><br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+	
+	<tr>
+		<td class="tdLeft">W09: 04/17</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">SQL 語法（其他練習）</a><br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W10: 04/24</td>
+		<td class="tdMid">
+			期中作業驗收<br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W11: 05/01</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 表單互動</a><br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W12: 05/08</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PDO</a><br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W13: 05/15</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">Session</a><br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W14: 05/22</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">檔案上傳</a><br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W15: 05/29</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">檔案下載</a><br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W16: 06/05</td>
+		<td class="tdMid">
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">DVWA</a><br>
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W17: 06/12</td>
+		<td class="tdMid">
+			期末上機測驗或實作
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+	<tr>
+		<td class="tdLeft">W18: 06/19</td>
+		<td class="tdMid">
+			期末作業驗收
+		</td>
+		<td class="tdRight">
+			&nbsp;
+		</td>
+	</tr>
+
+</table>
+<br>
+</center>
+</body></html>
