--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -34,12 +34,13 @@
 	<tr><th align="left" colspan=2 style="border-bottom-width:2;border-bottom-color:black">課程公布欄</th></tr>
 	<tr><th class="thLeft" align=center>發佈日期</th><th class="thRight" align=center>內容</th></tr>
 	<tr>
-		<td class="tdLeft">02/18</td>
+		<td class="tdLeft">02/19</td>
 		<td class="tdRight">
 			<ul>
 				<li>本課程相關連結：
 					<ul>
 						<li>教材頁面: <a href="https://geniusturtle6174.github.io/tutor_web#PHP">https://geniusturtle6174.github.io/tutor_web#PHP</a></li>
+						<li>iClass: <a href="https://iclass.tku.edu.tw/course/240820/content">數位編輯系統</a></li>
 						<li>MS Teams: <a href="https://teams.microsoft.com/l/team/19%3Au5v99MQA67N6nGm6VmQ7IOjfLvWm56cnZtMckXvyWMQ1%40thread.tacv2/conversations?groupId=913b7068-cf86-466c-be00-59fa2ea0649b&tenantId=399232fb-17d1-45ca-bda6-5b540441bd62">112下 - 數位編輯系統 - 教科二P - 0322</a></li>
 					</ul>
 				</li>
