--- a/24s_tku/pr01.htm
+++ b/24s_tku/pr01.htm
@@ -11,9 +11,10 @@
 
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 <ul>
-	<li>(20%)假設有三個變數 $a、$b，以及 $c，分別代表方程式 ax<sup>2</sup> + bx + c = 0 的三個係數（其中 a 不為 0），請寫出一段程式，來計算其判別式的值。</li>
-	<li>(20%)假設有一個變數 $n，內容是一個非負的數字，請寫出一段程式，將其開根號。關於開根號的方式，請上網搜尋。</li>
-	<li>(60%，回家練習，下次上課再評分)假設有三個變數 $a、$b，以及 $c，分別代表 ax<sup>2</sup> + bx + c = 0 的三個係數（其中 a 不為 0），請寫出一段程式，求出方程式的根。你的程式，必須可以求出及顯示虛根，例如「2 + 3i, 2 - 3i」。</li>
+	<li>(25%)假設有三個變數 $a、$b，以及 $c，分別代表方程式 ax<sup>2</sup> + bx + c = 0 的三個係數（其中 a 不為 0），請寫出一段程式，來計算其判別式的值。</li>
+	<li>(25%)假設有一個變數 $n，內容是一個非負的數字，請寫出一段程式，將其開根號。關於開根號的方式，請上網搜尋。</li>
+	<li>(10%，回家練習，下次上課再評分，詳見說明)註冊一個 <a href="https://leetcode.com/">LeetCode</a> 帳號，並以你學過的任何一個程式語言解答<a href="https://leetcode.com/problems/add-two-integers/description/">此問題</a>。</li>
+	<li>(50%，回家練習，下次上課再評分)假設有三個變數 $a、$b，以及 $c，分別代表 ax<sup>2</sup> + bx + c = 0 的三個係數（其中 a 不為 0），請寫出一段程式，求出方程式的根。你的程式，必須可以求出及顯示虛根，例如「2 + 3i, 2 - 3i」。</li>
 </ul>
 
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
@@ -21,6 +22,7 @@
 <ul>
 	<li>Demo 時，教師可能會更改變數的值，來測試你的程式。你的程式碼，若會因為變數修改而失效，則最重將不予計分。</li>
 	<li>答案顯示的格式沒有限制，簡單清楚即可。</li>
+	<li>關於第三題：若未完成註冊 LeetCode 帳號者，第四題不給分。已有帳號者，可以不必註冊新的。已解答過任一其他 LeetCode 題目者，可以不用作答該指定題目，但教師可能會要求你用解答過的題目來 demo。若你想要用的語言不在 LeetCode 接受的範圍內，請盡速找教師討論。</li>
 </ul>
 
 </body></html>
