--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -85,10 +85,10 @@
 	<tr>
 		<td class="tdLeft">W03: 03/06</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 程式基礎訓練（重複執行）</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 程式基礎訓練（自訂函式、重複執行、LeetCode 注意事項整理）</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr02.htm">平時練習二</a><br>
 		</td>
 	</tr>
 
@@ -105,7 +105,7 @@
 	<tr>
 		<td class="tdLeft">W05: 03/20</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 程式基礎訓練（陣列、其他練習）</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 程式基礎訓練（字串、其他練習）</a><br>
 		</td>
 		<td class="tdRight">
 			&nbsp;
