--- a/24s_tku/prAndHwRules.htm
+++ b/24s_tku/prAndHwRules.htm
@@ -26,7 +26,7 @@
 	</li>
 	<br>
 
-	<li>除期末作業外，不接受使用課程介紹以外的語言或框架。</li>
+	<li>除期末作業或特殊宣布外，不接受使用課程介紹以外的語言或框架。</li>
 	<br>
 	
 	<li>會視情況要求上傳原始碼至 iClass 或其他指定位置。</li>
