--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -96,9 +96,10 @@
 		<td class="tdLeft">W04: 03/13</td>
 		<td class="tdMid">
 			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 程式基礎訓練（陣列）</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#HTML">HTML（表格）</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr03.htm">平時練習三</a><br>
 		</td>
 	</tr>
 
