--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -106,10 +106,10 @@
 	<tr>
 		<td class="tdLeft">W05: 03/20</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 程式基礎訓練（字串、其他練習）</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 程式基礎訓練（字串）</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr04.htm">平時練習四</a><br>
 		</td>
 	</tr>
 
@@ -139,7 +139,7 @@
 			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">SQL 語法（DELETE、INSERT、UPDATE）</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			預定公布期中作業
 		</td>
 	</tr>
 	
@@ -189,7 +189,7 @@
 			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">Session</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			預定公布期末作業
 		</td>
 	</tr>
 
