--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -119,24 +119,25 @@
 			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">phpMyAdmin 設定簡介、SQL 語法（SELECT）</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr05.htm">平時練習五</a>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W07: 04/03</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">SQL 語法（SELECT、JOIN）</a><br>
+			教學觀摩週不上課<br>
+			自我閱讀：<a href="https://geniusturtle6174.github.io/tutor_web#PHP">SQL 語法（DELETE、INSERT、UPDATE）</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr06.htm">平時練習六</a>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W08: 04/10</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">SQL 語法（DELETE、INSERT、UPDATE）</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">SQL 語法（SELECT、JOIN）</a><br>
 		</td>
 		<td class="tdRight">
 			預定公布期中作業
