--- a/24s_tku/hwmt.htm
+++ b/24s_tku/hwmt.htm
@@ -20,14 +20,13 @@
 			<li><a href="https://leetcode.com/problems/missing-number/">268. Missing Number</a>。</li>
 		</ul>
 	</li>
-	<li>SQL 區：請依照<a href="">這裡</a>的資料表描述，回答下列問題，每題各 20 分。不用事先繳交，demo 時由教師抽選三題請你回答。
+	<li>SQL 區：請依照<a href="hwmt_table.htm">這裡</a>的資料表描述，自行練習以下能力指標。不用事先繳交，demo 時由教師現場出三題請你上機回答，每題各 20 分。
 		<ul>
-			<li></li>
-		</ul>
-	</li>
-	<li>問卷區：請依照自己想法回答下列問題，全數回答者採計課堂互動 1 次，繳交方式為 Teams 傳送私訊，格式不拘，清楚易懂即可。
-		<ul>
-			<li>課程大綱中「使用你學過的任何一種程式語言，在不查詢任何資料的情況下，寫出一個接受使用者輸入一個任意正整數後，能印出從 1 到該數的所有正整數」的自我篩選條件，是否有恰好符合本課程對程式能力的要求？或者你覺得「篩選條件太簡單，應該用更難一點的題目」，還是「課程要求沒有那麼高，所以篩選條件可以簡單一點」？</li>
+			<li>選出指定帳號密碼的使用者。</li>
+			<li>依指定順序列出所有課程。</li>
+			<li>依指定順序列出某人（使用者流水號）參加的所有課程（課程流水號）。</li>
+			<li>依指定順序列出某人（使用者流水號）參加的所有課程（課程科號、名稱、描述）。</li>
+			<li>列出某帳號參加的所有課程（課程流水號）及身分。</li>
 		</ul>
 	</li>
 </ul>
@@ -40,6 +39,12 @@
 			<li>非以 PHP 解出者不計分。</li>
 			<li>用相同程式碼，同時讓 LeetCode 可以 AC 以及符合加分規則，才能取得加分的分數。</li>
 			<li>符合特殊加分規則者，請盡可能於 demo 時主動提醒教師。</li>
+		</ul>
+	</li>
+	<li>SQL 區
+		<ul>
+			<li>資料表描述中的資料只是範例，實際 demo 時，教師會使用更多資料（不過表格和欄位都不會新增），來測試你下的 SQL 指令。</li>
+			<li>Demo 時可以攜帶紙本手寫的筆記來參考。</li>
 		</ul>
 	</li>
 </ul>
