--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -140,17 +140,19 @@
 			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">SQL 語法（SELECT、JOIN）</a><br>
 		</td>
 		<td class="tdRight">
-			預定公布期中作業
+			<a href="pr07.htm">平時練習七</a><br>
+			<a href="hwmt.htm">期中作業</a>
 		</td>
 	</tr>
 	
 	<tr>
 		<td class="tdLeft">W09: 04/17</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">SQL 語法（其他練習）</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#HTML">HTML（表單）</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#JavaScript">JavaScript 簡介</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr08.htm">平時練習八</a><br>
 		</td>
 	</tr>
 
