--- a/24s_tku/hwmt.htm
+++ b/24s_tku/hwmt.htm
@@ -45,6 +45,7 @@
 		<ul>
 			<li>資料表描述中的資料只是範例，實際 demo 時，教師會使用更多資料（不過表格和欄位都不會新增），來測試你下的 SQL 指令。</li>
 			<li>Demo 時可以攜帶紙本手寫的筆記來參考。</li>
+			<li>Demo 時會由教師認為比較難的題目開始問。如果你答對了，教師可能會直接給予簡單題的分數，以節省時間。</li>
 		</ul>
 	</li>
 </ul>
