--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -148,8 +148,8 @@
 	<tr>
 		<td class="tdLeft">W09: 04/17</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_web#HTML">HTML（表單）</a><br>
-			<a href="https://geniusturtle6174.github.io/tutor_web#JavaScript">JavaScript 簡介</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#HTML">HTML（連結、表單）</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#JavaScript">JavaScript（簡介、自訂函式、表單、事件、Cookie）</a><br>
 		</td>
 		<td class="tdRight">
 			<a href="pr08.htm">平時練習八</a><br>
