--- a/24s_tku/pr08.htm
+++ b/24s_tku/pr08.htm
@@ -11,13 +11,17 @@
 
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 <ul>
-	<li>登記期中作業 demo 參考時段。</li>
+	<li>(35%)登記期中作業 demo 參考時段。</li>
+	<li>(35%)期中作業程式區任一題取得 Accepted。教師僅檢視 LeetCode 畫面，不會問問題，並且不會記錄你做的是哪一題。</li>
+	<li>(35%)期中作業 SQL 區任一指標自己出一題並回答。教師僅會告知你的對錯，不會問問題，但是你答對才算分。</li>
 </ul>
 
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
 
 <ul>
-	<li>課堂時間內完成登記者得 100，本週內（週六 23:59）完成登記者得 70。逾時未登記者，其 demo 時段由教師指定，且無法取得本練習之分數。</li>
+	<li>本練習最高採計至 100 分。</li>
+	<li>第一題：課堂時間內完成者得滿分，課堂當天內完成者得 24 分，逾時者不收，且其 demo 時段由教師指定。</li>
+	<li>第二及第三題：課堂時間內完成者得滿分，本週內（週六 23:59）完成者得 24 分，逾時者不收。</li>
 	<li>登記順序依快問快答名次決定，快問快答前 floor(到課人數 / 3) 名者除較先登記外，亦採計課堂互動一次。</li>
 </ul>
 
