--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -169,10 +169,10 @@
 	<tr>
 		<td class="tdLeft">W11: 05/01</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 表單互動</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PHP 表單互動、PDO</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr09.htm">平時練習九</a><br>
 		</td>
 	</tr>
 
