--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -192,7 +192,7 @@
 			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">Session</a><br>
 		</td>
 		<td class="tdRight">
-			預定公布期末作業
+			<a href="hwfinal.htm">期末作業</a>
 		</td>
 	</tr>
 
