--- a/24s_tku/pr09.htm
+++ b/24s_tku/pr09.htm
@@ -11,19 +11,20 @@
 
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 <ul>
-	<li>(40%)製作一個輸入帳號密碼的表單，在使用者按下送出後，會將資料送至 PHP 端，並由 PHP 顯示先前所輸入的帳號密碼。本題只需要顯示使用者的輸入內容，**不必**用期中作業的資料表進行任何比對。</li>
-	<li>(40%)把教材中顯示歌曲排行榜的範例，改為顯示期中作業的所有課程，即 course 資料表的所有內容。</li>
-	<li>(95%)製作一個輸入帳號密碼的表單，在使用者按下送出後，會將資料送至 PHP 端；若帳號存在於期中作業的範例資料表中，則顯示該帳號所參與的課程及其身分，否則請顯示自訂的錯誤訊息。本題僅需比對帳號是否存在，**不必**比對密碼是否符合。</li>
+	<li>(35%)製作一個輸入帳號密碼的表單，在使用者按下送出後，會將資料送至 PHP 端，並由 PHP 顯示先前所輸入的帳號密碼。本題只需要顯示使用者的輸入內容，**不必**用期中作業的資料表進行任何比對。</li>
+	<li>(35%)把教材中顯示歌曲排行榜的範例，改為顯示期中作業的所有課程，即 course 資料表的所有內容。</li>
+	<li>(85%)製作一個輸入帳號密碼的表單，在使用者按下送出後，會將資料送至 PHP 端；若帳號及密碼的配對，存在於期中作業的範例資料表中，則顯示自訂的打招呼訊息，否則請顯示自訂的錯誤訊息。</li>
 	<li>(100%)製作一個輸入帳號密碼的表單，在使用者按下送出後，會將資料送至 PHP 端；若帳號及密碼的配對，存在於期中作業的範例資料表中，則顯示該帳號所參與的課程及其身分，否則請顯示自訂的錯誤訊息。</li>
 </ul>
 
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
 
 <ul>
-	<li>本練習採計「第一+第二題」、「單獨第三題」、「單獨第四題」三種狀況中，你取得最高分的那一種；其中，「第一+第二題」最多採計 60 分。</li>
+	<li>本練習採計「第一+第二題」、「單獨第三題」、「單獨第四題」這幾種狀況中，你取得最高分的那一種。</li>
 	<li>連結資料庫時須使用 PDO，須根據使用者輸入取得資料庫中的資料時須使用 prepared statement，否則分數以九折計。</li>
 	<li>第三及第四題中，會需要判斷 SELECT 是否有選到任何資料。相關方法請試著上網搜尋，或者詢問 chatGPT。</li>
-	<li>本週有到課並解出至少一題，或者於上課當天內完成正式請假並告知教師者，可以在次週課堂 demo 未解出之題目並以八五折計分，其餘狀況不收遲交。請假者須提供假條截圖，教師亦可能視情況要求你提出其他佐證，例如就醫證明等。</li>
+	<li>於本週課堂解出之題目，給予 10% 加分。</li>
+	<li>本週有到課並解出至少一題，或者於上課當天內完成正式請假並告知教師者，可以在次週課堂 demo 未解出之題目並且不折扣，其餘狀況不收遲交。請假者須提供假條截圖，教師亦可能視情況要求你提出其他佐證，例如就醫證明等。</li>
 </ul>
 
 </body></html>
