--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -182,7 +182,7 @@
 			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PDO</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr10.htm">平時練習十</a><br>
 		</td>
 	</tr>
 
