--- a/24s_tku/pr10.htm
+++ b/24s_tku/pr10.htm
@@ -11,8 +11,8 @@
 
 <p style="background-color:#f99;font-size:17pt">題目敘述與分數比率</p>
 <ul>
-	<li>(70%)實際執行教材中「簡易討論板」的範例。</li>
-	<li>(100%)把教材中「簡易討論板」的範例的看板編號，當作期中作業的課程流水號，並結合上一個平時練習的最後一題，於帳號密碼配對符合時，列出該人所參與的課程的看板。提示：請假設每一門課程已經都恰好有一個看板，因此你在列出看板時，不需要去檢查 dz_board 資料表。</li>
+	<li>(75%)實際執行教材中「簡易討論板」的範例。</li>
+	<li>(100%)把教材中「簡易討論板」的範例的看板編號，當作期中作業的課程流水號，並結合上一週平時練習的最後一題，於帳號密碼配對符合時，列出該人所參與的課程的看板，並提供超連結來檢視相關看板。於本題中，請假設每一門課程已經都恰好有一個看板，因此你在列出看板時，不需要去檢查 dz_board 資料表。</li>
 </ul>
 
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
@@ -22,6 +22,7 @@
 	<li>連結資料庫時須使用 PDO，須根據使用者輸入取得資料庫中的資料時須使用 prepared statement，否則分數以九折計。</li>
 	<li>於本週課堂解出之題目，給予 10% 加分。</li>
 	<li>本週有到課並解出至少一題（含補交上週題目），或者於上課當天內完成正式請假並告知教師者，可以在次週課堂 demo 未解出之題目並且不折扣，其餘狀況不收遲交。請假者須提供假條截圖，教師亦可能視情況要求你提出其他佐證，例如就醫證明等。</li>
+	<li>第二題於本週完成者，視同同時取得上週第四題分數，不必重覆排隊 demo。</li>
 </ul>
 
 </body></html>
