Update for pr11 and hwfinal

--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -189,9 +189,10 @@
 	<tr>
 		<td class="tdLeft">W13: 05/15</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">Session</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">PDO、Session</a><br>
 		</td>
 		<td class="tdRight">
+			<a href="pr11.htm">平時練習十一</a><br>
 			<a href="hwfinal.htm">期末作業</a>
 		</td>
 	</tr>
