--- a/24s_tku/hwfinal.htm
+++ b/24s_tku/hwfinal.htm
@@ -15,6 +15,7 @@
 <ul>
 	<li>(30%)登入、登出，登入後要顯示有參與的課程。</li>
 	<li>(30%)在有參與的課程發起以及回覆討論串。</li>
+	<li>(15%)在前兩項功能點當中，登入後的使用者看不到他沒參與的課程的討論板，也無法在沒參與的課程發表討論與回覆。</li>
 	<li>(15%)任何個人可修改自己的密碼與暱稱。</li>
 	<li>(15%)單一課程的任何參與者，可以檢視全部該課程的成員。</li>
 	<li>(15%)單一課程的教師，可以修改該課程的描述。</li>
@@ -22,18 +23,18 @@
 	<li>(5%)美工與版面設計</li>
 </ul>
 
-<p>會扣分的項目如下，惟若扣分後會使本作業成績低於 60 時，則不再扣減。若你有任何疑問，或者有不確定是否會被扣分的項目，應事先詢問教師：</p>
+<p>會扣分的項目如下，最多扣至本作業為 70 止。若你有任何疑問，或者有不確定是否會被扣分的項目，應事先詢問教師：</p>
 <ul>
 	<li>有任一處不是用 PHP + PDO + prepared statement 撰寫：不論幾處都總共扣 15 分。</li>
-	<li>有任一功能點可以在不使用他人帳號密碼的情況下，檢視、新增、修改、刪除不屬於自己該看該改的資料（包含但不限於發表討論串到未參與的課程、修改他人密碼等）：每一功能點扣 5 分。</li>
+	<li>第四項起的任一功能點，可以在不使用他人帳號密碼的情況下，檢視、新增、修改、刪除不屬於自己該看該改的資料（包含但不限於修改他人密碼、檢視其他課程成員等）：每一功能點扣 5 分。</li>
 </ul>
 
-<p>本作業最高採計至 100 分。請於 2024/06/17 08:00 前，將所有 PHP 檔案壓縮後，繳交壓縮檔至 iClass 專區。如果你的功能與期中作業及隨堂練習相比，需要新增資料庫欄位，則請將資料庫中所有相關於期末作業的資料表匯出，一併放入壓縮檔內再繳交。</p>
+<p>本作業最高採計至 100 分。請於 2024/06/17 08:00 前，將所有 PHP 檔案壓縮後（若有其他 HTML、CSS、JavaScript、各式圖片等檔案，請一併壓縮），繳交壓縮檔至 iClass 專區。如果你的功能與期中作業及隨堂練習相比，需要新增資料表或欄位，則請將資料庫中所有相關於期末作業的資料表匯出，一併放入壓縮檔內再繳交。</p>
 
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
 
 <ul>
-	<li>任何功能都需要先登入再操作，並請避免要求使用者反覆輸入帳號密碼，否則酌予扣分；未成功實作登入者，本作業不予計分。</li>
+	<li>任何功能都需要先登入再操作，並請避免要求使用者反覆輸入帳號密碼，否則酌予扣分（且不受前述扣分項最低至 70 為止之限制）；未成功實作登入者，本作業不予計分。</li>
 </ul>
 
 </body></html>
