Update rules for pr11 and hwfinal

--- a/24s_tku/hwfinal.htm
+++ b/24s_tku/hwfinal.htm
@@ -34,7 +34,8 @@
 <p style="background-color:#f99;font-size:17pt">注意事項</p>
 
 <ul>
-	<li>任何功能都需要先登入再操作，並請避免要求使用者反覆輸入帳號密碼，否則酌予扣分（且不受前述扣分項最低至 70 為止之限制）；未成功實作登入者，本作業不予計分。</li>
+	<li>任何功能都需要先登入再操作，並請避免要求使用者反覆輸入帳號密碼，否則酌予扣分，且不受前述扣分項最低至 70 為止之限制</li>
+	<li>未成功實作登入者，或密碼儲存時未加密者，本作業不予計分。</li>
 </ul>
 
 </body></html>
