--- a/24s_tku/pr11.htm
+++ b/24s_tku/pr11.htm
@@ -26,6 +26,7 @@
 <ul>
 	<li>本練習採計三題中，你取得最高分的那一題。</li>
 	<li>連結資料庫時須使用 PDO，須根據使用者輸入取得資料庫中的資料時須使用 prepared statement，否則分數以九折計。</li>
+	<li>若將密碼改為未加密儲存，則第二及第三題不予計分。</li>
 	<li>於本週課堂解出之題目，給予 10% 加分。</li>
 	<li>本週有到課並解出至少一題（含補交上週題目），或者於上課當天內完成正式請假並告知教師者，可以在次週課堂 demo 未解出之題目並且不折扣，其餘狀況不收遲交。請假者須提供假條截圖，教師亦可能視情況要求你提出其他佐證，例如就醫證明等。</li>
 	<li>第三題於本週完成者，視同同時取得上週第二題分數，不必重覆排隊 demo。</li>
