--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -48,6 +48,12 @@
 			</ul>
 		</td>
 	</tr>
+	<tr>
+		<td class="tdLeft">05/15</td>
+		<td class="tdRight">
+			評分比率調整，詳見各相關頁面。
+		</td>
+	</tr>
 </table>
 
 <br><br>
