--- a/24s_tku/hwfinal.htm
+++ b/24s_tku/hwfinal.htm
@@ -13,13 +13,13 @@
 
 <p>架設一個簡易的線上學習系統，來模擬一個學校中，不同課程的老師和學生們，對各自課程的的線上討論環境。預設的計分項目如下，其餘功能酌與加分：</p>
 <ul>
-	<li>(30%)登入、登出，登入後要顯示有參與的課程。</li>
-	<li>(30%)在有參與的課程發起以及回覆討論串。</li>
-	<li>(15%)在前兩項功能點當中，登入後的使用者看不到他沒參與的課程的討論板，也無法在沒參與的課程發表討論與回覆。</li>
-	<li>(15%)任何個人可修改自己的密碼與暱稱。</li>
-	<li>(15%)單一課程的任何參與者，可以檢視全部該課程的成員。</li>
-	<li>(15%)單一課程的教師，可以修改該課程的描述。</li>
-	<li>(20%)任何個人可以上傳自己的大頭貼，且大頭貼會顯示在成員列表或討論串中至少任一處。</li>
+	<li>(0%)登入、登出，登入後要顯示有參與的課程。</li>
+	<li>(0%)在有參與的課程發起以及回覆討論串。</li>
+	<li>(30%)在前兩項功能點當中，登入後的使用者看不到他沒參與的課程的討論板，也無法在沒參與的課程發表討論與回覆。</li>
+	<li>(30%)任何個人可修改自己的密碼與暱稱。</li>
+	<li>(30%)單一課程的任何參與者，可以檢視全部該課程的成員。</li>
+	<li>(30%)單一課程的教師，可以修改該課程的描述。</li>
+	<li>(40%)任何個人可以上傳自己的大頭貼，且大頭貼會顯示在成員列表或討論串中至少任一處。</li>
 	<li>(5%)美工與版面設計</li>
 </ul>
 
@@ -35,7 +35,7 @@
 
 <ul>
 	<li>任何功能都需要先登入再操作，並請避免要求使用者反覆輸入帳號密碼，否則酌予扣分，且不受前述扣分項最低至 70 為止之限制。</li>
-	<li>未成功實作登入者，或密碼儲存時未加密者，本作業不予計分。</li>
+	<li>未成功實作前兩個功能項，或密碼儲存時未加密者，本作業不予計分。</li>
 </ul>
 
 </body></html>
