--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -206,17 +206,17 @@
 	<tr>
 		<td class="tdLeft">W14: 05/22</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">檔案上傳</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">Session、檔案上傳</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr12.htm">平時練習十二</a><br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W15: 05/29</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">檔案下載</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">檔案上傳、檔案下載</a><br>
 		</td>
 		<td class="tdRight">
 			&nbsp;
@@ -226,7 +226,7 @@
 	<tr>
 		<td class="tdLeft">W16: 06/05</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">DVWA</a><br>
+			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">檔案下載、DVWA</a><br>
 		</td>
 		<td class="tdRight">
 			&nbsp;
