--- a/24s_tku/index.htm
+++ b/24s_tku/index.htm
@@ -219,24 +219,25 @@
 			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">檔案上傳、檔案下載</a><br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr13.htm">平時練習十三</a><br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W16: 06/05</td>
 		<td class="tdMid">
-			<a href="https://geniusturtle6174.github.io/tutor_web#PHP">檔案下載、DVWA</a><br>
+			<a href="finalImpRules.htm">期末上機規則說明</a><br>
+			期末上機環境測試，詳見本週平時練習<br>
 		</td>
 		<td class="tdRight">
-			&nbsp;
+			<a href="pr14.htm">平時練習十四</a><br>
 		</td>
 	</tr>
 
 	<tr>
 		<td class="tdLeft">W17: 06/12</td>
 		<td class="tdMid">
-			期末上機測驗或實作
+			期末上機測驗
 		</td>
 		<td class="tdRight">
 			&nbsp;
