--- a/24s_tku/finalImpRules.htm
+++ b/24s_tku/finalImpRules.htm
@@ -15,10 +15,11 @@
 
 	<li>注意事項
 		<ul>
-			<li>系統帳號密碼將於考前另外用 Teams 提供。</li>
+			<li>系統帳號密碼如 Teams 訊息提供。</li>
 			<li>依照座位表入座。</li>
-			<li>允許參考紙本或線上資料、詢問 chatGPT，或者以電子形式收發影像或文字訊息。</li>
-			<li>禁止以有聲或實體的方式收發訊息，包含但不限於收發有聲影片、收發語音留言、傳紙條、敲打摩斯密碼，或者以雙旗傳送密碼。</li>
+			<li>允許：參考紙本或線上資料、以圖文方式詢問 chatGPT，或者以電子形式收發圖文訊息。</li>
+			<li>禁止：以有聲或實體的方式收發訊息，包含但不限於發送或收看有聲影片或語音留言、傳紙條、敲打摩斯密碼。</li>
+			<li>除發生地震等重大災害外，離開教室前須經過教師允許。</li>
 		</ul>
 	</li>
 	<br>
@@ -27,6 +28,9 @@
 	<br>
 
 	<li>於開始進行前，請務必詳閱專用網頁中，關於評分標準及系統操作等方面之細節說明。</li>
+	<br>
+
+	<li>結束後將現場評定成績，想立刻知道成績的同學可以留下。</li>
 	<br>
 
 	<li>以上若遇有狀況，依教師臨場調整為準。如有任何疑問應事先詢問，以免教師判決造成不利影響。</li>
