--- a/24s_tku/finalImpRules.htm
+++ b/24s_tku/finalImpRules.htm
@@ -10,7 +10,7 @@
 
 <ul>
 
-	<li>進行方式：於 W17 課堂時間進行，網址於教室現場公布，預計 09:30 開始共一小時。</li>
+	<li>進行方式：於 W17 課堂時間進行，網址於教室現場公布，預計 09:30 開始共一小時半。</li>
 	<br>
 
 	<li>注意事項
@@ -19,7 +19,7 @@
 			<li>依照座位表入座。</li>
 			<li>允許：參考紙本或線上資料、以圖文方式詢問 chatGPT，或者以電子形式收發圖文訊息。</li>
 			<li>禁止：以有聲或實體的方式收發訊息，包含但不限於發送或收看有聲影片或語音留言、傳紙條、敲打摩斯密碼。</li>
-			<li>除發生地震等重大災害外，離開教室前須經過教師允許。</li>
+			<li>除發生地震等災害外，離開教室前須經過教師允許。</li>
 		</ul>
 	</li>
 	<br>
