--- a/24s_tku/pr14.htm
+++ b/24s_tku/pr14.htm
@@ -27,7 +27,7 @@
 
 <ul>
 	<li>告知欲請假者，教師亦可能視情況要求你正式請假，或者提出相關佐證。</li>
-	<li>評分以本練習的敘述為準，不適用考試系統上的敘述。</li>
+	<li>原則上，教師於本次練習中，不會到你的位置旁邊檢查，請各位於離開教室前，主動找教師確認分數。</li>
 </ul>
 
 </body></html>
